syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.deutscheboerse.risk.dave";
option java_outer_classname = "PersistenceServiceProto";
package dave;

service PersistenceService {
    rpc storeAccountMargin (AccountMargin) returns (StoreReply) {}
}

message AccountMargin {
    string name = 1;
}

message StoreReply {
    string message = 1;
}